[gd_scene load_steps=21 format=1]

[ext_resource path="res://scripts/Corredor4.gd" type="Script" id=1]
[ext_resource path="res://assets/panel.png" type="Texture" id=2]
[ext_resource path="res://addons/GodotTIE/text_interface_engine.gd" type="Script" id=3]
[ext_resource path="res://addons/GodotTIE/GodotTIE_icon.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/Pixel_Berry_08_84_Ltd.Edition.fnt" type="BitmapFont" id=5]
[ext_resource path="res://scenes/Inventory.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/meshes/hakuTrue.scn" type="PackedScene" id=7]
[ext_resource path="res://scripts/camera.gd" type="Script" id=8]
[ext_resource path="res://scenes/meshes/MONSTER2.scn" type="PackedScene" id=9]
[ext_resource path="res://scenes/meshes/corredor4.scn" type="PackedScene" id=10]
[ext_resource path="res://addons/SMRT/dialog.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/fonts/Pixel_Berry_08_84_Ltd.Edition.TTF" type="DynamicFontData" id=12]

[sub_resource type="BoxShape" id=1]

extents = Vector3( 9.54787, 1, 0.584212 )

[sub_resource type="BoxShape" id=2]

extents = Vector3( 1.44816, 1.34417, 1.26318 )

[sub_resource type="BoxShape" id=3]

extents = Vector3( 6.322, 7.07823, 0.720605 )

[sub_resource type="BoxShape" id=4]

extents = Vector3( 12.3421, 1.52164, 3.05009 )

[sub_resource type="BoxShape" id=5]

extents = Vector3( 4.79061, 1, 16.905 )

[sub_resource type="Environment" id=6]

ambient_light/enabled = true
ambient_light/color = Color( 0.196078, 0.184314, 0.12549, 1 )
ambient_light/energy = 1.0
fxaa/enabled = false
background/mode = 1
background/color = Color( 0, 0, 0, 1 )
background/energy = 1.0
background/scale = 1.0
background/glow = 0.0
background/canvas_max_layer = null
glow/enabled = false
glow/blur_passes = 1
glow/blur_scale = 1
glow/blur_strength = 1
glow/blur_blend_mode = null
glow/bloom = 0.0
glow/bloom_treshold = 0.5
dof_blur/enabled = false
dof_blur/blur_passes = 1
dof_blur/begin = 100.0
dof_blur/range = 10.0
hdr/enabled = false
hdr/tonemapper = 0
hdr/exposure = 0.4
hdr/white = 1.0
hdr/glow_treshold = 0.95
hdr/glow_scale = 0.2
hdr/min_luminance = 0.4
hdr/max_luminance = 8.0
hdr/exposure_adj_speed = 0.5
fog/enabled = false
fog/begin = 100.0
fog/begin_color = Color( 0, 0, 0, 1 )
fog/end_color = Color( 0, 0, 0, 1 )
fog/attenuation = 1.0
fog/bg = true
bcs/enabled = false
bcs/brightness = 1.0
bcs/contrast = 1.0
bcs/saturation = 1.0
srgb/enabled = false

[sub_resource type="BoxShape" id=7]

extents = Vector3( 1, 1, 1 )

[sub_resource type="DynamicFont" id=8]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 12 )

[node name="Corredor4" type="Spatial"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.78569, 0 )
script/script = ExtResource( 1 )

[node name="Panel" type="Patch9Frame" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 28.0
margin/top = 421.0
margin/right = 991.0
margin/bottom = 584.0
texture = ExtResource( 2 )
patch_margin/left = 20
patch_margin/top = 4
patch_margin/right = 20
patch_margin/bottom = 4

[node name="TIE" type="ReferenceFrame" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 18.0
margin/top = 20.0
margin/right = 942.0
margin/bottom = 147.0
script/script = ExtResource( 3 )
__meta__ = {
"_editor_icon": ExtResource( 4 )
}
SCROLL_ON_MAX_LINES = true
BREAK_ON_MAX_LINES = true
AUTO_SKIP_WORDS = true
LOG_SKIPPED_LINES = true
SCROLL_SKIPPED_LINES = false
FONT = ExtResource( 5 )
PRINT_INPUT = true
BLINKING_INPUT = true
INPUT_CHARACTERS_LIMIT = -1

[node name="Inventory" parent="." instance=ExtResource( 6 )]

editor/display_folded = true

[node name="Haku" parent="." instance=ExtResource( 7 )]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -31.1099, 3.27761, 3.14682 )

[node name="Camera" type="Camera" parent="Haku"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.663414, -0.383022, 0.642788, 0.0252013, 0.870002, 0.492404, -0.747828, -0.310468, 0.586824, 59.0314, 43.8656, 52.3261 )
projection = 1
size = 45.0
near = 0.11
far = 200.0
keep_aspect = 1
current = false
visible_layers = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
script/script = ExtResource( 8 )

[node name="Areas" type="Spatial" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 65.3763, -3.00156, 0 )

[node name="AreaSala2" type="Area" parent="Areas"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.395752, 0, 1.34997 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -47.0766, 1.1823, 21.2126 )
shapes/0/trigger = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 1

[node name="CollisionShape" type="CollisionShape" parent="Areas/AreaSala2"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -47.0766, 1.1823, 21.2126 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="AreaSala3" type="Area" parent="Areas"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0182495, 0, 0 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -102.281, 1.52946, 2.59798 )
shapes/0/trigger = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 1

[node name="CollisionShape" type="CollisionShape" parent="Areas/AreaSala3"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -102.281, 1.52946, 2.59798 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="AreaPlanta" type="Area" parent="Areas"]

editor/display_folded = true
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 16.2914, 0, 0.652588 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Transform( 2.6611, 0, 0, 0, 2.6611, 0, 0, 0, 2.6611, -113.268, 3.96496, -12.2217 )
shapes/0/trigger = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 1

[node name="CollisionShape" type="CollisionShape" parent="Areas/AreaPlanta"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 2.6611, 0, 0, 0, 2.6611, 0, 0, 0, 2.6611, -113.268, 3.96496, -12.2217 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="AreaQuadro" type="Area" parent="Areas"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -64.6137, 9.30778, -14.5906 )
shapes/0/trigger = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 1

[node name="CollisionShape" type="CollisionShape" parent="Areas/AreaQuadro"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -64.6137, 9.30778, -14.5906 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="AreaFeiDialogo" type="Area" parent="Areas"]

editor/display_folded = true
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -99.1136, 0, 0 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 52.8535, 2.11128, 13.2316 )
shapes/0/trigger = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 1

[node name="CollisionShape" type="CollisionShape" parent="Areas/AreaFeiDialogo"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 52.8535, 2.11128, 13.2316 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="AreaVerifica" type="Area" parent="Areas"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -80.7359, 18.5479, 8.73231 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.39387, -15.5178, -7.99035 )
shapes/0/trigger = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 1

[node name="CollisionShape" type="CollisionShape" parent="Areas/AreaVerifica"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.39387, -15.5178, -7.99035 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
environment = SubResource( 6 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.687908, -0.327426, 0.647747, -0.143858, 0.813246, 0.563859, -0.711398, -0.481066, 0.512335, 13.9326, 54.7869, 0 )
layers = 1
params/enabled = true
params/editor_only = false
params/bake_mode = 0
params/energy = 1.0
colors/diffuse = Color( 1, 1, 1, 1 )
colors/specular = Color( 1, 1, 1, 1 )
shadow/shadow = false
shadow/darkening = 0.0
shadow/z_offset = 0.05
shadow/z_slope_scale = 0.0
shadow/esm_multiplier = 60.0
shadow/blur_passes = 1.0
projector = null
operator = 0
shadow/mode = 0
shadow/max_distance = 0.0
shadow/split_weight = 0.5
shadow/zoffset_scale = 2.0

[node name="Monsters" type="Spatial" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.95661, 0 )

[node name="monster2" parent="Monsters" instance=ExtResource( 9 )]

transform/local = Transform( 1.69292, 0, 0, 0, 1.69292, 0, 0, 0, 1.69292, 28.5103, -0.413013, -11.5522 )

[node name="AreaHit" type="Area" parent="Monsters/monster2"]

editor/display_folded = true
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.772027, 0, 0, 0, 0.772027, 0, 0, 0, 0.772027, 0.115364, 1.56371, -1.83262 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 7 )
shapes/0/transform = Transform( 6.17735, 0, 0, 0, 6.17735, 0, 0, 0, 6.17735, -0.00517464, 4.74871, 0.413785 )
shapes/0/trigger = true
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 1

[node name="CollisionHit" type="CollisionShape" parent="Monsters/monster2/AreaHit"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 6.17735, 0, 0, 0, 6.17735, 0, 0, 0, 6.17735, -0.00517464, 4.74871, 0.413785 )
shape = SubResource( 7 )
trigger = true
_update_shape_index = 0

[node name="AreaTalk" type="Area" parent="Monsters/monster2"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.772027, 0, 0, 0, 0.772027, 0, 0, 0, 0.772027, 0.115364, 1.56371, -1.83262 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 7 )
shapes/0/transform = Transform( 6.17735, 0, 0, 0, 6.17735, 0, 0, 0, 6.17735, -0.00517464, 4.74871, 0.413785 )
shapes/0/trigger = true
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 1

[node name="CollisionHit" type="CollisionShape" parent="Monsters/monster2/AreaTalk"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 6.17735, 0, 0, 0, 6.17735, 0, 0, 0, 6.17735, -0.00517464, 4.74871, 0.413785 )
shape = SubResource( 7 )
trigger = true
_update_shape_index = 0

[node name="corredor4" parent="." instance=ExtResource( 10 )]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.49776, 0 )

[node name="Canvas" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="dialog" parent="Canvas" instance=ExtResource( 11 )]

margin/left = 31.0
margin/top = 412.0
margin/right = 30.0
margin/bottom = 40.0
texture = ExtResource( 2 )
patch_margin/left = 20
patch_margin/right = 20
language = "res://corredor4.lan"
font = SubResource( 8 )
font_size = 20
dialog_frame_height = 3

[connection signal="buff_end" from="Panel/TIE" to="." method="_on_TIE_buff_end"]

[connection signal="body_enter" from="Areas/AreaSala2" to="." method="_on_AreaSala2_body_enter"]

[connection signal="body_enter" from="Areas/AreaSala3" to="." method="_on_AreaSala3_body_enter"]

[connection signal="body_exit" from="Areas/AreaSala3" to="." method="_on_Area_body_exit"]

[connection signal="body_enter" from="Areas/AreaPlanta" to="." method="_on_AreaPlanta_body_enter"]

[connection signal="body_enter" from="Areas/AreaQuadro" to="." method="_on_AreaQuadro_body_enter"]

[connection signal="body_exit" from="Areas/AreaQuadro" to="." method="_on_Area_body_exit"]

[connection signal="body_enter" from="Areas/AreaFeiDialogo" to="." method="_on_AreaFeiDialogo_body_enter"]

[connection signal="body_exit" from="Areas/AreaFeiDialogo" to="." method="_on_Area_body_exit"]

[connection signal="body_enter" from="Monsters/monster2/AreaHit" to="." method="_on_AreaHitMonster2_body_enter"]

[connection signal="body_exit" from="Monsters/monster2/AreaHit" to="." method="_on_Area_body_exit"]

[connection signal="body_enter" from="Monsters/monster2/AreaTalk" to="." method="_on_AreaTalkMonster2_body_enter"]

[connection signal="body_exit" from="Monsters/monster2/AreaTalk" to="." method="_on_Area_body_exit"]

[connection signal="dialog_control" from="Canvas/dialog" to="." method="_on_dialog_dialog_control"]

[connection signal="finished" from="Canvas/dialog" to="." method="_on_dialog_finished"]


[editable path="Inventory"]
